@@ -1,1 +1,0 @@
-bin/cairosvg @PREFIX@/bin/cairosvg@PYVERSSUFFIX@
