@@ -1,2 +1,0 @@
-CairoSVG is a SVG converter based on Cairo. It can export SVG files to PDF,
-PostScript and PNG files.
