@@ -1,26 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2023/08/14 05:23:58 wiz Exp $
-
-DISTNAME=	CairoSVG-1.0.22
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
-PKGREVISION=	3
-CATEGORIES=	converters graphics python
-MASTER_SITES=	${MASTER_SITE_PYPI:=C/CairoSVG/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://www.cairosvg.org/
-COMMENT=	Simple SVG Converter for Cairo
-LICENSE=	gnu-lgpl-v3
-
-DEPENDS+=	${PYPKGPREFIX}-cairocffi-[0-9]*:../../graphics/py-cairocffi
-
-USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_ACCEPTED=	27
-PY_PATCHPLIST=	yes
-
-post-install:
-	${MV} ${DESTDIR}${PREFIX}/bin/cairosvg \
-		${DESTDIR}${PREFIX}/bin/cairosvg${PYVERSSUFFIX} || ${TRUE}
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
