@@ -1,48 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2022/01/14 17:51:51 wiz Exp $
-bin/cairosvg${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}
-${PYSITELIB}/cairosvg/__init__.py
-${PYSITELIB}/cairosvg/__init__.pyc
-${PYSITELIB}/cairosvg/__init__.pyo
-${PYSITELIB}/cairosvg/css.py
-${PYSITELIB}/cairosvg/css.pyc
-${PYSITELIB}/cairosvg/css.pyo
-${PYSITELIB}/cairosvg/features.py
-${PYSITELIB}/cairosvg/features.pyc
-${PYSITELIB}/cairosvg/features.pyo
-${PYSITELIB}/cairosvg/parser.py
-${PYSITELIB}/cairosvg/parser.pyc
-${PYSITELIB}/cairosvg/parser.pyo
-${PYSITELIB}/cairosvg/surface/__init__.py
-${PYSITELIB}/cairosvg/surface/__init__.pyc
-${PYSITELIB}/cairosvg/surface/__init__.pyo
-${PYSITELIB}/cairosvg/surface/colors.py
-${PYSITELIB}/cairosvg/surface/colors.pyc
-${PYSITELIB}/cairosvg/surface/colors.pyo
-${PYSITELIB}/cairosvg/surface/defs.py
-${PYSITELIB}/cairosvg/surface/defs.pyc
-${PYSITELIB}/cairosvg/surface/defs.pyo
-${PYSITELIB}/cairosvg/surface/helpers.py
-${PYSITELIB}/cairosvg/surface/helpers.pyc
-${PYSITELIB}/cairosvg/surface/helpers.pyo
-${PYSITELIB}/cairosvg/surface/image.py
-${PYSITELIB}/cairosvg/surface/image.pyc
-${PYSITELIB}/cairosvg/surface/image.pyo
-${PYSITELIB}/cairosvg/surface/path.py
-${PYSITELIB}/cairosvg/surface/path.pyc
-${PYSITELIB}/cairosvg/surface/path.pyo
-${PYSITELIB}/cairosvg/surface/shapes.py
-${PYSITELIB}/cairosvg/surface/shapes.pyc
-${PYSITELIB}/cairosvg/surface/shapes.pyo
-${PYSITELIB}/cairosvg/surface/svg.py
-${PYSITELIB}/cairosvg/surface/svg.pyc
-${PYSITELIB}/cairosvg/surface/svg.pyo
-${PYSITELIB}/cairosvg/surface/tags.py
-${PYSITELIB}/cairosvg/surface/tags.pyc
-${PYSITELIB}/cairosvg/surface/tags.pyo
-${PYSITELIB}/cairosvg/surface/text.py
-${PYSITELIB}/cairosvg/surface/text.pyc
-${PYSITELIB}/cairosvg/surface/text.pyo
-${PYSITELIB}/cairosvg/surface/units.py
-${PYSITELIB}/cairosvg/surface/units.pyc
-${PYSITELIB}/cairosvg/surface/units.pyo
