@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:06:51 nia Exp $
-
-BLAKE2s (CairoSVG-1.0.22.tar.gz) = f4128575532fec601688e5bba650c20c9875022344afd012b973e3f7503a9c59
-SHA512 (CairoSVG-1.0.22.tar.gz) = 5f4ea7b80947092620827e454182af7332082a8c84fddc035f75ed19c09b4a9027d6bfd5c96e5f388150833788a71ab8fb77a1ffdd963b8106f07b1908a0c8f6
-Size (CairoSVG-1.0.22.tar.gz) = 30896 bytes
