@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2890 2024/04/30 07:38:15 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2891 2024/04/30 07:40:16 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4721,3 +4721,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated parallel/py-threadpoolctl to 3.5.0 [adam 2024-04-30]
 	Updated textproc/py-sphinx-gallery to 0.16.0 [adam 2024-04-30]
 	Removed print/py-weasyprint0 successor print/py-weasyprint [wiz 2024-04-30]
+	Removed converters/py27-cairosvg successor converters/py-cairosvg [wiz 2024-04-30]
